<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/dark_blue"
    tools:context=".bubble_sort_code">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/selection_sort"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/the_selection_sort_algorithm_sorts_an_array_by_repeatedly_finding_the_minimum_element_considering_ascending_order_from_unsorted_part_and_putting_it_at_the_beginning_the_algorithm_maintains_two_subarrays_in_a_given_array"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/the_subarray_which_is_already_sorted"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/remaining_subarray_which_is_unsorted"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/time_complexity_o_n2"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/auxiliary_space_o_1"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cpp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="C++"
            android:layout_marginEnd="10dp"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/java"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Java"
            android:padding="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/python"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Python"
            android:padding="10dp"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/codeTxt"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text=""
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_height="match_parent"/>
    </ScrollView>
</LinearLayout>