<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/dark_blue"
    tools:context=".bubble_sort_code">
    <TextView
        android:layout_width="match_parent"
        android:text="Insertion Sort"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/insertion_sort_is_a_simple_sorting_algorithm_that_works_similar_to_the_way_you_sort_playing_cards_in_your_hands_the_array_is_virtually_split_into_a_sorted_and_an_unsorted_part_values_from_the_unsorted_part_are_picked_and_placed_at_the_correct_position_in_the_sorted_part"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/insertion_sort_is_adaptive_in_nature_i_e_it_is_appropriate_for_data_sets_which_are_already_partially_sorted"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/time_complexity_o_n2"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/auxiliary_space_o_1"
        android:layout_height="wrap_content"/>


    <LinearLayout

        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cpp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="C++"
            android:layout_marginEnd="10dp"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/java"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Java"
            android:padding="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/python"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Python"
            android:padding="10dp"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/codeTxt"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text=""
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_height="match_parent"/>
    </ScrollView>
</LinearLayout>