<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CodeActivity">

    <TextView
        android:id="@+id/algoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection_sort"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold" />



    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/algoDesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_complexity_o_n2"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auxiliary_space_o_1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cpp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="C++"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/java"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="Java"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/python"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="Python"
            android:textColor="@color/yellow"
            android:textSize="18sp" />
    </LinearLayout>


    <io.github.kbiakov.codeview.CodeView
        android:id="@+id/codeTxt"

        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />
</LinearLayout>