<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorting"
        android:textColor="@color/light_grey"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualizer"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:text="@string/enter_your_elements"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        app:cornerRadius="30dp"
        android:background="@color/light_grey"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ele_1"
            android:layout_margin="5dp"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">
        </EditText>

        <EditText
            android:id="@+id/ele_2"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">
        </EditText>

        <EditText
            android:id="@+id/ele_3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">
        </EditText>

        <EditText
            android:id="@+id/ele_4"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">
        </EditText>

        <EditText
            android:id="@+id/ele_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_margin="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">
        </EditText>

    </LinearLayout>

    <Button
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="SORT"
        android:id="@+id/sort"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:hapticFeedbackEnabled="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/picton_blue"
        app:cornerRadius="30dp" />
</LinearLayout>
